# hbcxx

./: .gitignore  ChangeLog  Makefile.am  README.asciidoc  configure.ac
examples/: beep  include  libzero.cpp  libzero.h  stopwatch
m4/: ax_prog_asciidoc_version.m4
src/: CompilationUnit.cpp  CompilationUnit.h  DefaultLauncher.cpp  DefaultLauncher.h  GdbLauncher.cpp  GdbLauncher.h  Launcher.cpp  Launcher.h  NoArgsLauncher.cpp  NoArgsLauncher.h  Options.cpp  Options.h  PrePreProcessor.cpp  PrePreProcessor.h  Toolset.cpp  Toolset.h  WrapperLauncher.cpp  WrapperLauncher.h  filesystem.cpp  filesystem.h  main.cpp  string.h  system.cpp  system.h  util.h
tests/: empty.cpp  empty.h  flags.cpp  hbcxx.cpp  include.cpp  indirect.cpp  indirect.h  self-hosting-test  shlex.cpp  source.cpp  startswith.cpp  system.cpp  touch.cpp
